# stapel-reviews

./: CHANGELOG.md  CONFIG.MD  CONTRIBUTING.md  MODULE.md  Makefile  README.md  SECURITY.md  __init__.py  _capabilities.py  _codegen.py  _codegen_settings.py  actions.py  admin.py  apps.py  checks.py  codegen_urls.py  conf.py  conftest.py  dto.py  errors.py  functions.py  gdpr.py  models.py  pyproject.toml  registry.py  serializers.py  services.py  urls.py  urls_v1.py  views.py
.github/workflows/: ci.yml  publish.yml
docs/: capabilities.json  capabilities.meta.json  errors.json  schema.json
migrations/: 0001_initial.py
schemas/consumes/: user.deleted.json
schemas/emits/: reviews.review.hidden.json  reviews.review.published.json
schemas/functions/: reviews.aggregate.json
tests/: test_aggregate.py  test_api.py  test_checks.py  test_comm.py  test_contract.py  test_gdpr.py  test_moderation.py  test_public_api.py  test_registry_policy.py  test_reviewing.py  urls.py
