[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-reviews"
version = "0.1.7"
description = "Target-generic reviews and ratings for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "reviews", "ratings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "stapel-core>=0.10,<1.0",
]

[project.urls]
Homepage = "https://github.com/usestapel/stapel-reviews"
Repository = "https://github.com/usestapel/stapel-reviews"
Documentation = "https://github.com/usestapel/stapel-reviews#readme"
Changelog = "https://github.com/usestapel/stapel-reviews/blob/main/CHANGELOG.md"
Issues = "https://github.com/usestapel/stapel-reviews/issues"

[project.optional-dependencies]
all = []

[tool.setuptools]
package-dir = {"stapel_reviews" = "."}
packages = ["stapel_reviews", "stapel_reviews.migrations"]

[tool.setuptools.package-data]
stapel_reviews = ["py.typed", "migrations/*.py", "schemas/**/*.json"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Single source for the git hooks and CI (they pass the same flags on the CLI).
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
django_find_project = false
addopts = "--tb=short -q --import-mode=importlib"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]
